Fixed csv translations files.

--- a/axelor-meta/src/main/resources/translations/en.csv
+++ b/axelor-meta/src/main/resources/translations/en.csv
@@ -68,4 +68,4 @@
 "Not implemented yet!","Not implemented yet!",
 "exportPath","Export Path",
 "Please enter your export path fisrt.","Please enter your export path fisrt.",
-"Export done.","Export done."
+"Export done.","Export done.",
