--- a/axelor-meta/src/main/resources/translations/fr.csv
+++ b/axelor-meta/src/main/resources/translations/fr.csv
@@ -68,4 +68,4 @@
 "Not implemented yet!","Pas encore implémenté!",
 "exportPath","Chemin d'export",
 "Please enter your export path fisrt.","Merci de renseigné un chemin d'export.",
-"Export done.","Export terminé."
+"Export done.","Export terminé.",
