Fixed csv translations files.

--- a/axelor-auth/src/main/resources/translations/en.csv
+++ b/axelor-auth/src/main/resources/translations/en.csv
@@ -3,25 +3,25 @@
 "Duplicates found:","Duplicates found",
 "Not a valid object.","Not a valid object",
 "Object found:","Object found",
-"code","code",
-"name","name",
-"restricted","restricted",
-"permissions","permissions",
-"object","object",
-"canRead","canRead",
-"canWrite","canWrite",
-"canCreate","canCreate",
-"canRemove","canRemove",
-"readCondition","readCondition",
-"readParams","readParams",
-"writeCondition","writeCondition",
-"writeParams","writeParams",
-"createCondition","createCondition",
-"createParams","createParams",
-"removeCondition","removeCondition",
-"removeParams","removeParams",
-"password","password",
-"group","group",
+"code","Code",
+"name","Name",
+"restricted","Restricted",
+"permissions","Permissions",
+"object","Object",
+"canRead","Can Read",
+"canWrite","Can Write",
+"canCreate","Can Create",
+"canRemove","Can Remove",
+"readCondition","Read Condition",
+"readParams","Read Params",
+"writeCondition","Write Condition",
+"writeParams","Write Params",
+"createCondition","Create Condition",
+"createParams","Create Params",
+"removeCondition","Remove Condition",
+"removeParams","Remove Params",
+"password","Password",
+"group","Group",
 "groups","Groupes",
 "User","User",
 "Groups","Groups",
