--- a/axelor-wkf/src/main/resources/i18n/en.csv
+++ b/axelor-wkf/src/main/resources/i18n/en.csv
@@ -42,3 +42,4 @@
 "Node","Node",
 "Transition","Transition",
 "Can't save workflow without start node","Can't save workflow without start node",
+"workflow.metaModel","Model",
