--- a/axelor-wkf/src/main/resources/i18n/fr.csv
+++ b/axelor-wkf/src/main/resources/i18n/fr.csv
@@ -42,3 +42,4 @@
 "Node","Noeud",
 "Transition","Transition",
 "Can't save workflow without start node","Vous ne pouvez pas sauvegarder le workflow sans noeud de début.",
+"workflow.metaModel","Modèle",
