Fix open editor url in the controller function openEditor; Update translation.

--- a/axelor-wkf/src/main/resources/i18n/en.csv
+++ b/axelor-wkf/src/main/resources/i18n/en.csv
@@ -43,3 +43,4 @@
 "Transition","Transition",
 "Can't save workflow without start node","Can't save workflow without start node",
 "workflow.metaModel","Model",
+"Editor","Editor",
