Add wizard to create permissions from package name.

--- a/axelor-auth/src/main/resources/i18n/en.csv
+++ b/axelor-auth/src/main/resources/i18n/en.csv
@@ -37,3 +37,10 @@
 "Login","Login",
 "Users","Users",
 "User Management","User Management",
+"Params","Params",
+"Wizard Permissions","Wizard Permissions",
+"Wizard Permission","Wizard Permission",
+"Groups","Groups",
+"Generate","Generate",
+"Show permissions","Show permissions",
+"Target package","Target package",
