--- a/axelor-auth/src/main/resources/i18n/fr.csv
+++ b/axelor-auth/src/main/resources/i18n/fr.csv
@@ -37,3 +37,10 @@
 "Login","Connection",
 "Users","Utilisateurs",
 "User Management","Gestion des utilisateurs",
+"Params","Paramètres",
+"Wizard Permissions","Assistants de permissions",
+"Wizard Permission","Assistant de permissions",
+"Groups","Groupes",
+"Generate","Generer",
+"Show permissions","Voir permissions",
+"Target package","Package cible",
